--- a/Day11/css/style.css
+++ b/Day11/css/style.css
@@ -1,8 +1,9 @@
 .container{
-    width: 500px;
-    height:600px;
     border: 2px solid black;
-    /* background-image: linear-gradient(45deg, red,blue,pink,yellow); */
-    background-image: radial-gradient( red 30%, green 40%,yellow 50%);
-    background-color: red;
+    width: 100%;
+    height: 200px;
+    
 }
+ .navbar li {
+    display: flex;
+ }
